# nano-cohere-transcribe

./: pyproject.toml
autokernel_models/: cohere_decoder_step.py  cohere_encoder_block.py
demo/: README.md  app.py  requirements.txt
nano_cohere_transcribe/: audio.py  generate.py
